fixed alignment issues on fa-plus icons

--- a/web/app/themes/monk-theme/style.css
+++ b/web/app/themes/monk-theme/style.css
@@ -5,7 +5,7 @@
 Theme Name:     Monk-theme
 Description:    Monk Magazine Custom theme.
 Author:         Adam Haley
-Version:        0.1.6
+Version:        0.2.0
 */
 body {
   display: grid;
@@ -182,6 +182,8 @@ a.more-link img {
 }
 a.more-link i {
   display: inline-block;
+  position: relative;
+  top: 0.4em;
   color: #000 !important;
 }
 a.more-link i:hover {
@@ -446,18 +448,10 @@ a.more-link i:hover {
 }
 .more-stuff-to-buy i {
   position: relative;
-  top: -2px;
+  top: 0.4em;
+  margin-left: 0.2em;
   display: inline-block;
   color: #000 !important;
-}
-.xs .more-stuff-to-buy i {
-  top: -7px;
-}
-.sm .more-stuff-to-buy i {
-  top: -4px;
-}
-.md .more-stuff-to-buy i {
-  top: -3px;
 }
 .more-stuff-to-buy i:hover {
   color: #fb0303 !important;
@@ -538,6 +532,7 @@ a.more-link i:hover {
 }
 .on-the-road .more-thrills i {
   position: relative;
+  top: 0.6em;
   display: inline-block;
   color: #000 !important;
 }
